SAK-19412 static code review changes
git-svn-id: https://source.sakaiproject.org/svn/osp/trunk@85378 66ffb92e-73f9-0310-93c1-f5514f145a0a